changed glycan image retrieval to using POST and using standard links